# Cortex-Vault

./: Anti-Hype.md  Bottlenecks.md  COWORK_HANDOFF.md  Concept Inbox.md  Reading Notes for Merguez.md  Reading Notes for Saucisse.md  chat_handoff_2026-04-29.md  citations-to-use.md  cluster_11_personal_calendar.md  cluster_12_google_calendar_sync.md  cluster_15_reminders.md  cluster_16_qol_pack.md  cluster_17_block_widget_rewrite.md  cluster_18_table_excel_layer.md  cluster_20_shape_editor.md  cluster_21_text_editor_toolbar.md  cluster_22_document_templates.md  phase_2_overview.md
.research-hub/: index.db
02-Daily Log/: 2026-04-25.md  2026-04-26.md  2026-04-27.md  NOTES.md
03-Projects/01-Test/: index.md
03-Projects/01-Test Project/: index.md
03-Projects/01-Test Project/01-Test Experiment/: index.md  iter-01 - 2026-04-27.md
03-Projects/01-Test/01-Test Experiment/: index.md  iter-01 - 2026-04-27.md  iter-02 - 2026-04-27.md
declercq-cortex/: MD Test.md  NOTES.md  package.json  pnpm-lock.yaml  trial-notes.template.md  verify-cluster-1-fixes.ps1  verify-cluster-1.ps1  verify-cluster-10.ps1  verify-cluster-11-v1.5.ps1  verify-cluster-11-v1.6.ps1  verify-cluster-11-v1.7.ps1  verify-cluster-11.ps1  verify-cluster-12.ps1  verify-cluster-14-v1.2.ps1  verify-cluster-14-v1.3.ps1  verify-cluster-14-v1.4.ps1  verify-cluster-14-v1.6.ps1  verify-cluster-14.ps1  verify-cluster-15.ps1  verify-cluster-16-v1.1.4.ps1  verify-cluster-16-v1.1.ps1  verify-cluster-16.ps1  verify-cluster-17-v1.1.ps1  verify-cluster-17.ps1  verify-cluster-18-v1.0.1.ps1  verify-cluster-18-v1.1.ps1  verify-cluster-18-v1.2.ps1  verify-cluster-18.ps1  verify-cluster-19-v1.0.1.ps1  verify-cluster-19-v1.0.2.ps1  verify-cluster-19-v1.0.3.ps1  verify-cluster-19-v1.0.ps1  verify-cluster-19-v1.1.ps1  verify-cluster-19-v1.2.ps1  verify-cluster-19-v1.3.ps1  verify-cluster-2.ps1  verify-cluster-20-v1.0.ps1  verify-cluster-20-v1.1.ps1  verify-cluster-21-v1.0.ps1  verify-cluster-21-v1.1.ps1  (+15 more)
declercq-cortex/src/: App.tsx  index.css  main.tsx
declercq-cortex/src-tauri/: Cargo.toml  tauri.conf.json
declercq-cortex/src-tauri/src/: lib.rs  main.rs
declercq-cortex/src/components/: BacklinksPanel.tsx  BlockContextMenu.tsx  Calendar.tsx  CategoriesSettings.tsx  ColorLegend.tsx  CommandPalette.tsx  CortexImageNodeView.tsx  CropModal.tsx  Editor.tsx  EditorToolbar.tsx  EventEditModal.tsx  ExperimentBlockModal.tsx  FileTree.tsx  FrontmatterPanel.tsx  IdeaLog.tsx  ImageAnnotationPopover.tsx  ImageContextMenu.tsx  ImageViewer.tsx  InsertTableModal.tsx  IntegrationsSettings.tsx  LayoutGrid.tsx  LayoutPicker.tsx  MarkQueueView.tsx  MethodsArsenal.tsx  NewHierarchyModal.tsx  NotificationBell.tsx  OrphanAttachmentsModal.tsx  PDFReader.tsx  ParticleOverlay.tsx  ProtocolsLog.tsx  RelatedHierarchyPanel.tsx  ReminderOverlay.tsx  ReviewsMenu.tsx  ShapeEditor.tsx  ShapeEditorToolbar.tsx  ShapeTemplateModal.tsx  SlotPicker.tsx  (+7 more)
(+24 files in other folders)
