[package]
name = "declercq-cortex"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "declercq_cortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-full"] }
git2 = "0.18"
notify = "6"
walkdir = "2"
# Cluster 6: server-side PDF text extraction so PDFs are searchable from
# the command palette via the existing FTS5 index. Pure-Rust crate, no
# system PDF library dependency. Some PDFs (encrypted, image-only) extract
# nothing — we treat that as "not searchable" rather than fatal.
pdf-extract = "0.7"
# Cluster 10: HTTP client for the GitHub integration. rustls-tls keeps us
# off the system OpenSSL on Linux/Windows and lets the integration build
# in any CI/dev environment without a system crypto library. `json` brings
# in serde_json wiring for deserialising API responses.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

